--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: "Joshua Taylor"
-description: "Joshua Taylor, Artificial Intelligence, Logic, Programming, Interoperability"
+description: "Artificial Intelligence, Logic, Programming, Semantic Web, Interoperability, Cybersecurity"
